--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ gast==0.2.0
 grpcio==1.12.1
 html5lib==0.9999999
 Markdown==2.6.11
+matplotlib
 mock==2.0.0
 networkx==1.11
 numpy==1.14.5
 pbr==4.0.4
 protobuf==3.6.0
+seaborn
 scikit-learn==0.19.1
 scipy==1.1.0
 six==1.11.0
